--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,9 @@
   },
   "permissions": [
    "activeTab"
-   ]
+ ],
+ "content_scripts": [{
+    "matches": ["https://customercare.squarespace.com/squarespace-admin/support/*"],
+    "js":      ["content.js"]
+  }]
 }
