--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "SS Event Loader",
-  "description": "This extension will help you load the entirety of the events tab of the admin lookup with just one click.",
-  "version": "1.3",
+  "name": "TriggerPull",
+  "description": "An extension that blocks your triggers",
+  "version": "1.0",
 
   "browser_action": {
    "default_icon": "icon.png",
@@ -12,8 +12,15 @@
   "permissions": [
    "activeTab"
  ],
- "content_scripts": [{
-    "matches": ["https://customercare.squarespace.com/squarespace-admin/support/*", "https://customersupport.squarespace.com/squarespace-admin/support/*"],
-    "js":      ["content.js"]
-  }]
+ "content_scripts": [
+  {
+    "matches": [
+    "*://*/*"
+    ],
+    "js":      [
+    "content.js"
+    ],
+     "run_at": "document_end"
+  }
+  ]
 }
