--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
 
-  "name": "TriggerPull",
-  "description": "An extension that blocks your triggers",
+  "name": "LogParser",
+  "description": "Parses .txt result files",
   "version": "1.0",
 
   "browser_action": {
